// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package team_proto;
option go_package = "android/soong/android/team_proto";

message Team {
  // REQUIRED: Name of the build target
  optional string target_name = 1;

  // REQUIRED: Code location of the target.
  // To be used to support legacy/backup systems that use OWNERS file and is
  // also required for our dashboard to support per code location basis UI
  optional string path = 2;

  // REQUIRED: Team ID of the team that owns this target.
  optional string trendy_team_id = 3;

  // OPTIONAL: Files directly owned by this module.
  repeated string file = 4;
}

message AllTeams {
  repeated Team teams = 1;
}
